--- a/Exception_Handling.ipynb
+++ b/Exception_Handling.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Exception Handling.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNMksdUEGbCDKa1QMoghwAs",
+      "authorship_tag": "ABX9TyOOE1mtA6keVfcBz/0U72AM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,7 +32,7 @@
         "colab": {}
       },
       "source": [
-        "File Handling\n",
+        "Exception Handling\n",
         "\n",
         "Types of error :\n",
         "  1: Syntax Error\n",
